
                            Change Log


RELEASE  VERSION/DATE TO BE FILLED IN LATER

  From John Doe:

    - Whatever John Doe did.

  From William Deegan:
    - Fix issue where code in utility routine to_String_for_subst() had code whose result was never
      properly returned.  
      (Found by: James Rinkevich https://pairlist4.pair.net/pipermail/scons-users/2017-October/006358.html )

  From Thomas Berg:
    - Fixed a regression in scons-3.0.0 where "from __future__ import print_function" was imposed
      on the scope where SConstruct is executed, breaking existing builds using PY 2.7.

  From William Deegan:
    - Fix broken subst logic where a string with "$$(abc)" was being treated as "$(abc) and the
      logic for removing the signature escapes was then failing because there was no closing "$)".
      This was introduced by a pull request to allow recursive variable evaluations to yield a string
      such as "$( $( some stuff $) $)".

RELEASE 3.0.0 - Mon, 18 Sep 2017 08:32:04 -0700

NOTE: This is a major release.  You should expect that some targets may rebuild when upgrading.
Significant changes in some python action signatures. Also switching between PY 2.7 and PY 3.5, 3.6
will cause rebuilds.


  From William Blevins:
    - Updated D language scanner support to latest: 2.071.1. (PR #1924)
      https://dlang.org/spec/module.html accessed 11 August 2016
      - Enhancements:
        - Added support for selective imports: "import A : B, C;" -> A
        - Added support for renamed imports. "import B = A;" -> A
        - Supports valid combinations: "import A, B, CCC = C, DDD = D : EEE = FFF;" -> A, B, C, D
      - Notes:
        - May find new (previously missed) Dlang dependencies.
        - May cause rebuild after upgrade due to dependency changes.
    - Updated Fortran-related tests to pass under GCC 5/6.
    - Fixed SCons.Tool.Packaging.rpm.package source nondeterminism across builds.

  From William Deegan: